test/shared/applications/valid/withDirectoriesWithoutIndex/data/server/writeModel/sampleContext/sampleAggregate/events.js
'use strict';

const { events } = require('../../../../base/server/writeModel/sampleContext/sampleAggregate');

module.exports = events;
